# pipr

./: Cargo.toml
src/: command_evaluation.rs  commandlist.rs  lineeditor.rs  main.rs  pipr_config.rs  snippets.rs  util.rs
src/app/: main_window.rs  mod.rs
src/ui/: command_list.rs  input_field.rs  mod.rs  outputs.rs
