[package]
name = "pipr"
version = "0.1.0"
authors = ["ElKowar <dev@elkowar.dev>"]
edition = "2024"
license = "MIT"
publish = true
repository = "https://github.com/Elkowar/pipr"
readme = "Readme.md"
description = "A commandline-utility to interactively build complex shell pipelines"

keywords = ["shell", "cli", "terminal", "utility", "tool"]
categories = ["command-line-utilities", "development-tools", "text-editors"]
exclude = ["build_docker.sh", "showcase.gif"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.15.11", default-features = false, features = ['toml'] }
crossterm = "0.29.0"
anyhow = "1.0"
itertools = "0.14"
unicode-width = "0.2.0"
which = "7.0.3"
getopts = "0.2"
maplit = "1.0"
atty = "0.2"
crossbeam-channel = "0.5"
syntect = "5.2.0"
lazy_static = "1.4.0"
ansi-to-tui = "7.0.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
libc = "0.2.172"
wait-timeout = "0.2.1"
